# latex

./: .env.example  .gitignore  DEPLOY.md  README.md  firestore.rules  init-firestore-rules.md  render.yaml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  LatexEditor.jsx  PdfPreview.jsx  SnippetPalette.jsx  SplitPane.jsx  StatusBar.jsx  Toolbar.jsx  UserList.jsx
frontend/src/components/sidebar/: AssetsPanel.jsx  FileTree.jsx  OutlinePanel.jsx
frontend/src/hooks/: useCompile.js  useRoom.js
frontend/src/lib/: firebase.js  room.js  user.js
frontend/src/pages/: HomePage.jsx  RoomPage.jsx
