[package]
name = "texlitecollab-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
base64          = "0.22"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile        = "3"

[profile.release]
opt-level = 3
